# AI

./: settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/cc/ikt/ai/: ExampleInstrumentedTest.kt
app/src/androidTest/java/cc/imorning/ai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/java/cc/ikt/ai/: AiApplication.kt
app/src/main/java/cc/ikt/ai/activity/: BaseActivity.kt  MainActivity.kt
app/src/main/java/cc/imorning/ai/: AiApplication.kt
app/src/main/java/cc/imorning/ai/activity/: BaseActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/ikt/ai/: ExampleUnitTest.kt
app/src/test/java/cc/imorning/ai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/src/androidTest/java/cc/ikt/opencv/: ExampleInstrumentedTest.kt
opencv/src/androidTest/java/cc/imorning/opencv/: ExampleInstrumentedTest.kt
opencv/src/main/cpp/: CMakeLists.txt  opencv.cpp
opencv/src/main/java/cc/ikt/opencv/config/: Version.kt
opencv/src/main/java/cc/imorning/opencv/config/: Version.kt
opencv/src/test/java/cc/ikt/opencv/: ExampleUnitTest.kt
opencv/src/test/java/cc/imorning/opencv/: ExampleUnitTest.kt
